2011-12-04  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Samsung-ML-2570.xml, driver/hpijs-pcl5e.xml: Assigned
	  also PCL-5e drivers to the Samsung ML-2570 and recommended the
          PCL-5e driver "hpijs-pcl5e" as (at least some copies of) the
	  printer has problems with the PostScript and PCL-XL drivers
	  (Ubuntu bug 855412).
	* opt/126.xml, opt/2.xml: Use the special PageSize option for
	  dot-matrix printers for the Canon BJ-330, as it has a paper
	  handling like a dot-matrix printer (Ubuntu bug 854983).

2011-08-31  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-E120n.xml, driver/lj5gray.xml, driver/Postscript.xml:
	  The Lexmark E120n does not work in PostScript mode when using
	  generic PostScript PPD files. Updated comment and removed support
	  by "Postscript" driver. Rated down to "Mostly" (Ubuntu bug 802285).

2011-08-30  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml: Removed, this option does not
	  work any more with current Ghostscript (Ubuntu bug 659398).

	* driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
	  driver/ljet4.xml, driver/ljet4d.xml, printer/Lexmark-E230.xml:
	  Updated entry for the Lexmark E230: Device ID, PCL-5e drivers
	  (Ubuntu bug 821818).

	* printer/Brother-HL-2070N.xml, driver/hl1250.xml,
	  driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
	  driver/ljet4.xml, driver/pxlmono.xml: Added the Brother HL-2070N
	  (Ubuntu bug 778620).

2011-08-04  Daniel Dressler <danieru.dressler@gmail.com>

	* opt/*: Used Google refine to consolidate our option longname namespace.
	  Standardized on spelling of color, capitalization, expanded acronyms,
	  Page Size, Print Quality, Economy Mode, Monochrome Mode.

	* opt/*: Further consolidation, this time of option choices. Reduced
	  number of unique options from 834 to 742.

2011-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lx5000.xml, driver/pbm2l7k.xml, printer/Lexmark-5000.xml,