@@ -1,6 +1,16 @@
 <printer id="printer/Xerox-Phaser_6180DN">
   <make>Xerox</make>
   <model>Phaser 6180DN</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
   <lang>
     <postscript level="3" />
     <pcl level="5e" />
