@@ -1,5 +1,10 @@
 2011-12-04  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* printer/Xerox-Phaser_6180DN.xml, printer/Xerox-Phaser_6180MFP-D.xml:
+	  Make sure all Xerox Phaser 6180 printers have correct declaration
+	  of mechanisms, in particular of color capabilities (Debian bug
+	  642960). Thenks to Didier Raboud (odyx at debian dot org) for
+	  this patch.
 	* printer/Samsung-ML-2570.xml, driver/hpijs-pcl5e.xml: Assigned
 	  also PCL-5e drivers to the Samsung ML-2570 and recommended the
           PCL-5e driver "hpijs-pcl5e" as (at least some copies of) the
